# cite

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  readme.md  schema.md
.github/workflows/: cmake-multi-platform.yml
formatters/: chicago_formatter.cpp  chicago_formatter.hpp  mla_formatter.cpp  mla_formatter.hpp
include/: add.hpp  citation.hpp  export.hpp  json_utils.hpp
parsers/: bibjson_parser.cpp  bibjson_parser.hpp  json_parser.cpp  json_parser.hpp
src/: add.cpp  citation.cpp  export.cpp  json_utils.cpp  main.cpp
tests/: output.html  output.md  test.json  test2.json
